fix header on desktop - too wide

--- a/assets/css/style-responsive.css
+++ b/assets/css/style-responsive.css
@@ -9,6 +9,7 @@
         background: none;
         display: flex;
         text-align: left;
+        width: auto;
     }
     header .logo {
         height: auto;
